# CreditUnderwriting_Agentic_Workflow_Secured_App

./: .gitignore  README.md  config.py  crud.py  csv_files.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_browser.py
app/: main.py
app/auth/: dependencies.py  security.py
app/database/: crud.py  schemas.py
app/llm/: client.py
app/prompts/: basic.py  full.py
app/routers/: auth.py  chat.py  file_upload.py
app/utils/: config.py  logger.py  s3_utils.py
database/: crud.py  database.py
routers/: auth.py  loan_cases.py
utils/: dependencies.py  security.py
