[project]
name = "wf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "fastapi==0.110.0",
    "google-genai>=1.28.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.3",
    "langmem>=0.0.29",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.2.1",
    "pydantic[email]>=2.11.7",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy==2.0.29",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn==0.29.0",
]
